<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/VDLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/vd_logo"
            android:adjustViewBounds="true"/>

        <ImageButton
            android:id="@+id/Userimage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:text = "@string/pick_image"
            android:background="@null"
            app:srcCompat="@drawable/pick_image" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/EditTexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="24sp"
                    android:hint="@string/username"
                    android:gravity="center"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="24sp"
                    android:hint="@string/password"
                    android:gravity="center"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/TextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/UsernameTextview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="" />

                <TextView
                    android:id="@+id/PasswordTextview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/pass_star" />
            </LinearLayout>
        </FrameLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/SignInSignUpButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/SignInButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/SignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/purple_200"
                    app:backgroundTint="@color/white"
                    android:text="@string/sign_up" />
            </LinearLayout>

        </FrameLayout>


    </LinearLayout>
</layout>